--- a/webmagic-core/pom.xml
+++ b/webmagic-core/pom.xml
@@ -3,11 +3,12 @@
     <parent>
         <groupId>us.codecraft</groupId>
         <artifactId>webmagic-parent</artifactId>
-        <version>0.9.1-SNAPSHOT</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>webmagic-core</artifactId>
+    <version>${rversion}</version>
 
     <dependencies>
         <dependency>
@@ -76,6 +77,10 @@
             <artifactId>fastjson</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
