--- a/webmagic-core/pom.xml
+++ b/webmagic-core/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>us.codecraft</groupId>
         <artifactId>webmagic-parent</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.8.0-bate</version>
     </parent>
     <build>
         <plugins>
@@ -20,7 +20,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>webmagic-core</artifactId>
-    <version>${rversion}</version>
+    <version>0.8.0-bate</version>
 
     <dependencies>
         <dependency>
